--- a/css/styles.css
+++ b/css/styles.css
@@ -38,3 +38,9 @@ body{
 	background-color: #512dab;
 }
 
+.tab-content{
+	border-left: 1px solid #ddd;
+	border-right: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+}
+
